# dictate.sh

./: ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml  stt.py
.beads/: config.yaml  issues.jsonl
docs/: index.html  stt.py
examples/: config.json
src/dictate/: analysis.py  cli.py  constants.py  env.py  notes.py  notes_app.py  pipeline.py  rewrite.py  transcribe.py  ui.py
src/dictate/audio/: __init__.py  vad.py
src/dictate/model/: __init__.py  _utils.py  asr.py  decoder.py  encoder.py  loader.py
src/voiss/: __init__.py  analysis.py  api.py  cli.py  constants.py  notes.py  notes_app.py  pipeline.py  protocols.py  rewrite.py  transcribe.py  ui.py
src/voiss/apps/: __init__.py  analysis.py  cli.py  config.py  notes.py  notes_app.py  pipeline.py  ui.py
src/voiss/audio/: __init__.py  ring_buffer.py
src/voiss/core/: __init__.py  config.py  constants.py  env.py  text.py  transcribe.py  types.py
src/voiss/core/model/: __init__.py  asr.py  decoder.py  encoder.py  loader.py
src/voiss/model/: __init__.py  asr.py  decoder.py  encoder.py  loader.py
tests/: conftest.py  test_api.py  test_compat.py  test_logit_bias.py  test_text.py
