[project]
name = "dictate-stt"
version = "0.1.0"
description = "Real-time speech-to-text for Apple Silicon using MLX"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
  "mlx>=0.30.0",
  "mlx-lm>=0.30.0",
  "numpy>=2.0",
  "sounddevice>=0.5",
  "transformers>=5.0.0rc3",
  "huggingface-hub>=1.3.7",
  "webrtcvad-wheels>=2.0.14",
  "rich>=14.0",
  "litellm>=1.40",
]

[tool.uv]
prerelease = "allow"

[project.scripts]
dictate = "dictate.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dictate"]
