[project]
name = "voissistant"
version = "0.2.0"
description = "Real-time speech-to-text for Apple Silicon using MLX"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
  "mlx>=0.30.6",
  "mlx-lm>=0.30.6",
  "numpy>=2.0",
  "sounddevice>=0.5",
  "transformers>=5.1.0",
  "huggingface-hub>=1.4.1",
  "webrtcvad-wheels>=2.0.14",
  "rich>=14.0",
  "litellm>=1.81.8",
  "textual>=1.0",
]

[tool.uv]
prerelease = "allow"

[project.scripts]
voiss = "voiss.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voiss"]
